--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -165,7 +165,7 @@
       border-radius: 5px;
       cursor: pointer;
       font-size: 0.8em;
-      z-index: 250; /* acima de balões e trem */
+      z-index: 100; /* abaixo de balões*/
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       transition: background-color 0.3s ease;
     }
