--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -102,6 +102,17 @@
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
+    <!-- Script para forçar reload ao mudar orientação -->
+    <script>
+        let prevOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
+        window.addEventListener('resize', () => {
+            const currentOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
+            if (currentOrientation !== prevOrientation) {
+                location.reload();
+            }
+        });
+    </script>
+
     <script src="script.js"></script>
 </body>
 </html>
