--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -23,6 +23,9 @@
         firebase.initializeApp(firebaseConfig);
     </script>
     <style>
+        /* =========================
+           Estilos originais (mantive como você tinha)
+           ========================= */
         .login-link { cursor: pointer; }
         .user-dropdown {
             display: none;
@@ -78,6 +81,26 @@
             color: black;
             margin-top: 5px;
         }
+
+        /* =========================
+           NOVOS ESTILOS PARA EVITAR SOBREPOSIÇÃO
+           ========================= */
+        .map-container {
+            display: flex;
+            flex-direction: column; /* força título acima e SVG abaixo em qualquer orientação */
+        }
+        .title-container {
+            z-index: 10;                /* fica acima do SVG */
+            background-color: #fff;     /* cobrindo o que estiver atrás */
+        }
+        #linesSvg {
+            position: relative !important; /* sobrescreve qualquer absolute vindo do style.css */
+            top: auto  !important;
+            margin-top: 10px;              /* ajuste opcional: distância mínima do título */
+            z-index: 5;                     /* fica atrás do título */
+            width: 100%;                    /* garante que ocupe largura total */
+            /* se você quiser forçar uma altura específica, pode ajustar aqui */
+        }
     </style>
 </head>
 <body>
@@ -98,7 +121,7 @@
             <div id="levelUnitInfo" class="level-unit-info"></div>
         </div>
 
-        <!-- SVG para as linhas -->
+        <!-- SVG para as linhas (sempre abaixo do título) -->
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
