--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -23,7 +23,7 @@
         firebase.initializeApp(firebaseConfig);
     </script>
     <style>
-        /* Mantendo seus estilos originais */
+        /* ————— Seus estilos originais ————— */
         .login-link { cursor: pointer; }
         .user-dropdown {
             display: none;
@@ -71,6 +71,7 @@
         .title-container {
             text-align: center;
             margin-top: 20px;
+            background-color: #fff;
         }
         .level-unit-info {
             text-align: center;
@@ -79,12 +80,21 @@
             color: black;
             margin-top: 5px;
         }
-
-        /* Garante que o SVG (linhas) fique sempre abaixo dos títulos */
-        #linesSvg {
-            display: block;
-            margin-top: 20px; /* Ajuste conforme altura do título */
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            text-decoration: none;
+            color: #333;
+            padding: 8px 12px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            background-color: #f9f9f9;
+            z-index: 9999;
         }
+
+        /* Não há regras específicas para #linesSvg ou .map-container aqui — 
+           tudo volta ao que era antes */
     </style>
 </head>
 <body>
@@ -99,18 +109,38 @@
 
     <div class="map-container" id="mapContainer">
         <!-- Imagem de título centralizada sobre o fundo -->
-        <div class="title-container">
+        <div class="title-container" id="titleContainer">
             <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
             <!-- Nível e Unidade -->
             <div id="levelUnitInfo" class="level-unit-info"></div>
         </div>
 
-        <!-- SVG para as linhas (sempre abaixo do título, em qualquer orientação) -->
+        <!-- SVG para as linhas (fases) -->
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
-    <!-- Script para forçar reload ao mudar orientação -->
+    <!-- Script para ajustar padding-top e forçar reload na mudança de orientação -->
     <script>
+        // Ao carregar a página, ajusta o padding-top do container para deslocar o SVG abaixo do título
+        function adjustMapPadding() {
+            const titleEl = document.getElementById('titleContainer');
+            const mapEl = document.getElementById('mapContainer');
+            if (titleEl && mapEl) {
+                const titleHeight = titleEl.offsetHeight;
+                mapEl.style.paddingTop = titleHeight + 'px';
+            }
+        }
+
+        window.addEventListener('load', () => {
+            adjustMapPadding();
+        });
+
+        // Se o usuário redimensionar (e não recarregar), recalcule também
+        window.addEventListener('resize', () => {
+            adjustMapPadding();
+        });
+
+        // Forçar reload quando a orientação mudar (landscape ↔ portrait)
         let prevOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
         window.addEventListener('resize', () => {
             const currentOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
