--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -18,12 +18,11 @@
             messagingSenderId: "449818788486",
             appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
             measurementId: "G-07VVJG9LRS",
-            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1-firebasedatabase.app"
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
         };
         firebase.initializeApp(firebaseConfig);
     </script>
     <style>
-        /* ————— Seus estilos originais ————— */
         .login-link { cursor: pointer; }
         .user-dropdown {
             display: none;
@@ -71,7 +70,6 @@
         .title-container {
             text-align: center;
             margin-top: 20px;
-            background-color: #fff;
         }
         .level-unit-info {
             text-align: center;
@@ -80,21 +78,6 @@
             color: black;
             margin-top: 5px;
         }
-        .back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            text-decoration: none;
-            color: #333;
-            padding: 8px 12px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            background-color: #f9f9f9;
-            z-index: 9999;
-        }
-
-        /* Não há regras específicas para #linesSvg ou .map-container aqui — 
-           tudo volta ao que era antes */
     </style>
 </head>
 <body>
@@ -109,38 +92,18 @@
 
     <div class="map-container" id="mapContainer">
         <!-- Imagem de título centralizada sobre o fundo -->
-        <div class="title-container" id="titleContainer">
+        <div class="title-container">
             <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
             <!-- Nível e Unidade -->
             <div id="levelUnitInfo" class="level-unit-info"></div>
         </div>
 
-        <!-- SVG para as linhas (fases) -->
+        <!-- SVG para as linhas -->
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
-    <!-- Script para ajustar padding-top e forçar reload na mudança de orientação -->
+    <!-- Script para forçar reload ao mudar orientação -->
     <script>
-        // Ao carregar a página, ajusta o padding-top do container para deslocar o SVG abaixo do título
-        function adjustMapPadding() {
-            const titleEl = document.getElementById('titleContainer');
-            const mapEl = document.getElementById('mapContainer');
-            if (titleEl && mapEl) {
-                const titleHeight = titleEl.offsetHeight;
-                mapEl.style.paddingTop = titleHeight + 'px';
-            }
-        }
-
-        window.addEventListener('load', () => {
-            adjustMapPadding();
-        });
-
-        // Se o usuário redimensionar (e não recarregar), recalcule também
-        window.addEventListener('resize', () => {
-            adjustMapPadding();
-        });
-
-        // Forçar reload quando a orientação mudar (landscape ↔ portrait)
         let prevOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
         window.addEventListener('resize', () => {
             const currentOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
